@@ -3,6 +3,7 @@ ovirt-host-deploy -- oVirt host deploy
 ????-??-?? - Version 1.2.1
 
  * vdsmhooks: use short distribution name as suffix.
+ * hardware: fix typo in debug message.
 
 2014-03-28 - Version 1.2.0
 
